<resources>
    <string name="app_name">GitHubClient</string>
    <string name="placeholder_input">Your username here</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="starred">STARRED</string>
    <string name="repositories">REPOSITORIES</string>
    <string name="watchers">WATCHERS</string>
    <string name="forked">FORKED</string>
</resources>