<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:background="#B1C2DD"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/followersRegion"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="0.25">

        <ImageView
            android:id="@+id/followersIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:contentDescription="followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_followers"
            app:tint="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/followersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/followersIcon"
            app:layout_constraintTop_toBottomOf="@+id/followersIcon"
            tools:text="@string/followers" />

        <TextView
            android:id="@+id/followersValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="5"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintBottom_toBottomOf="@+id/followersIcon"
            app:layout_constraintStart_toEndOf="@+id/followersIcon" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/followingRegion"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="0.25">

        <ImageView
            android:id="@+id/followingIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:contentDescription="following"
            android:foregroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_following"
            app:tint="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/followingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/followingIcon"
            app:layout_constraintTop_toBottomOf="@+id/followingIcon"
            tools:text="@string/following" />

        <TextView
            android:id="@+id/followingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="5"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintBottom_toBottomOf="@+id/followingIcon"
            app:layout_constraintStart_toEndOf="@+id/followingIcon" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/starredRegion"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="0.25">

        <ImageView
            android:id="@+id/starredIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:contentDescription="starred"
            android:foregroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_starred"
            app:tint="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/starredLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starred"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/starredIcon"
            app:layout_constraintTop_toBottomOf="@+id/starredIcon"
            tools:text="@string/starred" />

        <TextView
            android:id="@+id/starredValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="5"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintBottom_toBottomOf="@+id/starredIcon"
            app:layout_constraintStart_toEndOf="@+id/starredIcon" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/reposRegion"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="0.25">

        <ImageView
            android:id="@+id/reposIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:contentDescription="repos"
            android:foregroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_repos"
            app:tint="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/reposLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repositories"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/reposIcon"
            app:layout_constraintTop_toBottomOf="@+id/reposIcon"
            tools:text="@string/repositories" />

        <TextView
            android:id="@+id/reposValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="5"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintBottom_toBottomOf="@+id/reposIcon"
            app:layout_constraintStart_toEndOf="@+id/reposIcon" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <ImageView
          android:id="@+id/profilePicture"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:srcCompat="@tools:sample/avatars" />

      <TableLayout
          android:layout_width="200dp"
          android:layout_height="match_parent"
          android:layout_marginStart="8dp"
          app:layout_constraintStart_toEndOf="@+id/profilePicture"
          app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:paddingBottom="4dp">

          <TextView
              android:id="@+id/displayName"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="left"
              android:text="display_name"
              android:textColor="@color/white"
              android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/githubRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp">

          <TextView
              android:id="@+id/githubUsername"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="left"
              android:text="\@github_username"
              android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:id="@+id/twitterRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:paddingBottom="4dp"
            android:visibility="visible">

          <ImageView
              android:id="@+id/twitterIcon"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_gravity="left"
              android:layout_weight="0.2"
              android:cropToPadding="false"
              android:paddingTop="4dp"
              app:srcCompat="@drawable/ic_twitter" />

          <TextView
              android:id="@+id/twitterUsername"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="left"
              android:layout_marginStart="4dp"
              android:layout_weight="0.7"
              android:text="twitter_username"
              android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:id="@+id/emailRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp">

          <ImageView
              android:id="@+id/emailIcon"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_gravity="left"
              android:layout_weight="0.2"
              android:cropToPadding="false"
              android:paddingTop="4dp"
              app:srcCompat="@drawable/ic_email" />

          <TextView
              android:id="@+id/email"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="start|left"
              android:layout_marginStart="4dp"
              android:layout_weight="0.7"
              android:text="john.doe@gmail.com"
              android:textColor="@color/white" />
        </TableRow>
      </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>